2007-09-01  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-map): Remove obsolete "C-c e"
	keybinding.

	* Version 1.7 released.

2007-07-18  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-warn): New keyword.

2007-07-05  Christian Faulhammer  <opfer@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-php-ext): New keywords
	(ebuild-mode-commands-php-pear-r1): New keywords
	(ebuild-mode-commands-php-sapi): New keywords
	(ebuild-mode-commands-php4_4-sapi): New keywords
	(ebuild-mode-commands-php5-sapi-r3): New keywords
	(ebuild-mode-commands-mysql): New keywords
	(ebuild-mode-commands-mysql_fx): New keywords
	(ebuild-mode-commands-kernel-mod): New keywords
	(ebuild-mode-commands-kernel-2): New keywords
	(ebuild-mode-commands-games-etmod): New keywords
	(ebuild-mode-commands-games-mods): New keywords
	(ebuild-mode-commands-games-q3mod): New keywords
	(ebuild-mode-commands-games-ut2k4mod): New keywords
	(ebuild-mode-commands-games): New keywords
	(ebuild-mode-commands-games-perl-module): New keywords
	(ebuild-mode-commands-games-perl-app): New keywords

2007-07-04  Christian Faulhammer  <opfer@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-vim): New keywords
	(ebuild-mode-commands-vim-doc): New keywords
	(ebuild-mode-commands-vim-plugin): New keywords
	(ebuild-mode-commands-xfce44): New keywords
	(ebuild-mode-commands-db): New keywords
	(ebuild-mode-commands-db-use): New keywords
	(ebuild-mode-commands-db4-fix): New keywords
	(ebuild-mode-commands-mozilla-launcher): New keywords
	(ebuild-mode-commands-mozconfig): New keywords
	(ebuild-mode-commands-mozconfig-2): New keywords
	(ebuild-mode-commands-mozcoreconf): New keywords
	(ebuild-mode-commands-mozextensions): New keywords
	changed version number to 1.7-pre and changed Copyright date
	(ebuild-mode): reordered: sandbox commands to top
	(ebuild-mode-commands-toolchain): New keywords
	(ebuild-mode-commands-toolchain-funcs): New keywords